# DataScienceNotebooks

./: .gitignore
courses/: data_visualization.ipynb  doveritelnye_interval.ipynb  gradBoost.ipynb
hobby/__MACOSX/transfer_learning_demo/: ._pyproject.toml
hobby/cluster/: Bank_cluster.ipynb  Анализ_данных_отделений_Банка.docx
hobby/learningCV/: checkpoint  georges-classifier2.tfl.ckpt-7821.index  georges-classifier2.tfl.ckpt-7900.index  georges_search.ipynb  pyproject.toml
hobby/learningCV/.ipynb_checkpoints/: georges_search-checkpoint.ipynb  georges_search_load_weights-checkpoint.ipynb
