[tool.poetry]
name = "learningCV"
version = "0.1.0"
description = ""
authors = ["Sergei Baksheev <example@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.0"
jupyter = "^1.0.0"
tensorflow = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
